Krav blir opprettet fortløpende.